Aula 13 dezembro Adicionei fotos, centrei a capa

--- a/4dez.css
+++ b/4dez.css
@@ -1,8 +1,9 @@
 img { max-width: 100%;}
 
 main { 
-        display: flex;
-        flex-wrap: wrap;
+        /*display: flex;
+        flex-wrap: wrap;*/
      }
 
-div { width: 47%;}
+div { text-align: center;}
+ 
