--- a/Trabalho design/4dez.css
+++ b/Trabalho design/4dez.css
@@ -8,6 +8,6 @@ main {
 div { text-align: center;}
  
 div#logo{
-        background-image: url("tiras\ de\ papel1.jpg");
+        background-image: url(".\papel-tiras-reciclagem-1024x768.jpg");
         background-size: contain;
 }
